--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/fav.png" type="image/x-icon">
-    <title>Guide</title>
+    <title>Travel Guide</title>
   </head>
   <body>
     <div id="root"></div>
